--- a/manifest.json
+++ b/manifest.json
@@ -1,61 +1,107 @@
 {
   "name": "BalanCoffee POS System",
   "short_name": "BalanCoffee",
-  "description": "Hệ thống POS quản lý đơn hàng và thanh toán cho quán cà phê",
+  "description": "Hệ thống POS quản lý đơn hàng và thanh toán cho quán cà phê BalanCoffee",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f8f9fa",
   "theme_color": "#8B4513",
   "orientation": "portrait-primary",
+  "scope": "/",
+  "lang": "vi",
+  "categories": ["business", "productivity", "food"],
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' fill='%23f8f9fa'/><text x='96' y='140' font-size='120' text-anchor='middle' fill='%238B4513'>☕</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' fill='%23f8f9fa' rx='24'/><circle cx='96' cy='96' r='60' fill='%238B4513'/><text x='96' y='110' font-size='60' text-anchor='middle' fill='%23f8f9fa'>☕</text></svg>",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect width='512' height='512' fill='%23f8f9fa'/><text x='256' y='370' font-size='320' text-anchor='middle' fill='%238B4513'>☕</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect width='512' height='512' fill='%23f8f9fa' rx='64'/><circle cx='256' cy='256' r='160' fill='%238B4513'/><text x='256' y='290' font-size='160' text-anchor='middle' fill='%23f8f9fa'>☕</text></svg>",
       "sizes": "512x512",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
-    }
-  ],
-  "categories": ["business", "productivity", "food"],
-  "lang": "vi",
-  "dir": "ltr",
-  "screenshots": [
+      "purpose": "any"
+    },
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 540 720'><rect width='540' height='720' fill='%23f8f9fa'/><text x='270' y='360' font-size='48' text-anchor='middle' fill='%238B4513'>BalanCoffee POS</text></svg>",
-      "sizes": "540x720",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect width='96' height='96' fill='%23f8f9fa' rx='12'/><circle cx='48' cy='48' r='30' fill='%238B4513'/><text x='48' y='55' font-size='30' text-anchor='middle' fill='%23f8f9fa'>☕</text></svg>",
+      "sizes": "96x96",
       "type": "image/svg+xml",
-      "form_factor": "narrow"
+      "purpose": "any"
+    },
+    {
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 144 144'><rect width='144' height='144' fill='%23f8f9fa' rx='18'/><circle cx='72' cy='72' r='45' fill='%238B4513'/><text x='72' y='82' font-size='45' text-anchor='middle' fill='%23f8f9fa'>☕</text></svg>",
+      "sizes": "144x144",
+      "type": "image/svg+xml",
+      "purpose": "any"
     }
   ],
   "shortcuts": [
     {
-      "name": "Tạo hóa đơn mới",
-      "short_name": "Hóa đơn mới",
-      "description": "Tạo hóa đơn mới nhanh chóng",
-      "url": "/?action=new-invoice",
+      "name": "Tạo đơn hàng mới",
+      "short_name": "Đơn mới",
+      "description": "Tạo đơn hàng mới",
+      "url": "/?action=new-order",
       "icons": [
         {
-          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect width='96' height='96' fill='%2328a745'/><text x='48' y='60' font-size='48' text-anchor='middle' fill='white'>+</text></svg>",
-          "sizes": "96x96"
+          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect width='96' height='96' fill='%2328a745' rx='12'/><text x='48' y='60' font-size='40' text-anchor='middle' fill='white'>+</text></svg>",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
+        }
+      ]
+    },
+    {
+      "name": "Xem hóa đơn",
+      "short_name": "Hóa đơn",
+      "description": "Xem danh sách hóa đơn",
+      "url": "/?action=invoices",
+      "icons": [
+        {
+          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect width='96' height='96' fill='%23007bff' rx='12'/><text x='48' y='60' font-size='30' text-anchor='middle' fill='white'>📄</text></svg>",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
         }
       ]
     },
     {
       "name": "Quản lý ca",
-      "short_name": "Admin",
-      "description": "Xem thống kê và quản lý ca làm việc",
+      "short_name": "Ca làm",
+      "description": "Quản lý ca làm việc",
       "url": "/?action=admin",
       "icons": [
         {
-          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect width='96' height='96' fill='%238B4513'/><text x='48' y='60' font-size='32' text-anchor='middle' fill='white'>📊</text></svg>",
-          "sizes": "96x96"
+          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect width='96' height='96' fill='%23ffc107' rx='12'/><text x='48' y='60' font-size='30' text-anchor='middle' fill='black'>📊</text></svg>",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
         }
       ]
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1280 800'><rect width='1280' height='800' fill='%23f8f9fa'/><rect x='40' y='40' width='1200' height='80' fill='%238B4513' rx='8'/><text x='640' y='90' font-size='32' text-anchor='middle' fill='white'>BalanCoffee POS</text><rect x='40' y='160' width='800' height='600' fill='white' stroke='%23dee2e6' rx='8'/><text x='440' y='200' font-size='24' text-anchor='middle' fill='%23333'>Menu đồ uống</text></svg>",
+      "sizes": "1280x800",
+      "type": "image/svg+xml",
+      "form_factor": "wide",
+      "label": "Giao diện chính của BalanCoffee POS"
+    }
+  ],
+  "related_applications": [],
+  "prefer_related_applications": false,
+  "edge_side_panel": {
+    "preferred_width": 480
+  },
+  "display_override": ["window-controls-overlay", "standalone"],
+  "protocol_handlers": [],
+  "file_handlers": [],
+  "share_target": {
+    "action": "/share-target/",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  }
 }
